modfied many features