@@ -84,7 +84,7 @@ mkdir -p "$INSTALL_DIR" "$SHARE_DIR"
 cp "$JAR_FILE" "${SHARE_DIR}/wayang-gollek-cli.jar"
 
 WRAPPER="${INSTALL_DIR}/${BINARY_NAME}"
-printf '#!/usr/bin/env bash\nexec java -jar "%s/share/wayang-gollek-cli.jar" "$@"\n' "$INSTALL_DIR" > "$WRAPPER"
+printf '#!/usr/bin/env bash\nexec java --add-modules jdk.incubator.vector -jar "%s/share/wayang-gollek-cli.jar" "$@"\n' "$INSTALL_DIR" > "$WRAPPER"
 chmod +x "$WRAPPER"
 
 echo "INFO: Installed '$BINARY_NAME' wrapper to $WRAPPER"
